# gamekit-rs

./: CHANGELOG.md  COVERAGE.md  COVERAGE_AUDIT.md  COVERAGE_AUDIT_V2.md  Cargo.toml  README.md  build.rs
examples/: 01_gamekit_smoke.rs  02_player_guest.rs  03_leaderboard.rs  04_leaderboard_entry.rs  05_achievement.rs  06_match.rs  07_turn_based.rs  08_real_time.rs  09_notification.rs  10_access_point.rs  11_challenge_definition.rs  12_score.rs  13_save.rs  14_game_activity.rs  15_async_auth.rs  16_async_leaderboard.rs  17_async_achievement.rs  18_async_saved_game.rs
src/: access_point.rs  achievement.rs  async_api.rs  base_player.rs  challenge_definition.rs  error.rs  ffi.rs  game_activity.rs  gk_match.rs  leaderboard.rs  leaderboard_entry.rs  leaderboard_set.rs  lib.rs  local_player.rs  local_player_listener.rs  match.rs  matchmaker.rs  matchmaker_ui.rs  notification.rs  player.rs  private.rs  real_time.rs  save.rs  score.rs  turn_based.rs
src/ffi/: access_point.rs  achievement.rs  async_ffi.rs  challenge_definition.rs  core.rs  game_activity.rs  leaderboard.rs  leaderboard_entry.rs  leaderboard_set.rs  local_player.rs  local_player_listener.rs  match.rs  matchmaker_ui.rs  mod.rs  notification.rs  player.rs  real_time.rs  save.rs  score.rs  turn_based.rs
swift-bridge/: Package.swift
swift-bridge/Sources/GameKitBridge/: AccessPoint.swift  Achievement.swift  Async.swift  ChallengeDefinition.swift  Core.swift  GameActivity.swift  Leaderboard.swift  LeaderboardEntry.swift  LeaderboardSet.swift  LocalPlayer.swift  LocalPlayerListener.swift  Match.swift  MatchmakerUI.swift  Notification.swift  Player.swift  RealTime.swift  Save.swift  Score.swift  TurnBased.swift
swift-bridge/Sources/GameKitBridge/include/: GameKitBridge.h
tests/: achievement_area.rs  area_smoke.rs  async_api_tests.rs  challenge_definition_area.rs  game_activity_area.rs  leaderboard_area.rs  local_player_area.rs  match_area.rs  turn_based_area.rs
tests/common/: mod.rs
