[package]
name = "gamekit-rs"
version = "0.8.7"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/doom-fish/gamekit-rs"
repository = "https://github.com/doom-fish/gamekit-rs"
description = "Safe Rust bindings for Apple's GameKit framework — Game Center, leaderboards, achievements, multiplayer, access points, scores, and saved games on macOS"
authors = ["Per Johansson <per@doom.fish>"]
keywords = ["gamekit", "gamecenter", "macos", "leaderboard", "apple"]
categories = ["api-bindings", "os::macos-apis"]
rust-version = "1.76"
readme = "README.md"
build = "build.rs"
include = [
    "src/**/*",
    "swift-bridge/Package.swift",
    "swift-bridge/Sources/**/*",
    "examples/**/*",
    "tests/**/*",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "CHANGELOG.md",
    "COVERAGE.md",
    "LICENSE-*",
]

[features]
default = []
async = []

[lints.rust]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

[lib]
name = "gamekit"
crate-type = ["lib"]

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
doom-fish-utils = { path = "../doom-fish-utils", version = ">=0.1, <0.4" }

[dev-dependencies]
pollster = "0.3"

[package.metadata.docs.rs]
all-features = true
default-target = "aarch64-apple-darwin"
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin"]
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[[example]]
name = "15_async_auth"
required-features = ["async"]

[[example]]
name = "16_async_leaderboard"
required-features = ["async"]

[[example]]
name = "17_async_achievement"
required-features = ["async"]

[[example]]
name = "18_async_saved_game"
required-features = ["async"]

[profile.release]
debug = "full"
strip = "none"
